sna/gen2: Clear STIPPLE setup before rendering with the 3D pipeline

One over-zealous removal too many.

Reported-by: Timo Kamph <timo@kamph.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55455
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>